--- a/guida.html
+++ b/guida.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lizberries Blog - Guida Completa</title>
+    <title>The Lizards Blog - Guida Completa</title>
     <style>
         * {
             margin: 0;
@@ -236,7 +236,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🎸 Lizberries Blog</h1>
+            <h1>🎸 The Lizards Blog</h1>
             <p>Guida Completa per la Creazione dei Post</p>
         </header>
         
@@ -385,7 +385,7 @@
                 <p>Il blog è costruito con <strong>Jekyll</strong> e <strong>GitHub Pages</strong>. I post vengono scritti in formato Markdown e pubblicati automaticamente su:</p>
                 <ul>
                     <li><strong>Blog Italiano:</strong> <a href="https://blog.thelizards.it" target="_blank">https://blog.thelizards.it</a></li>
-                    <li><strong>Blog Inglese:</strong> <a href="https://blog-en.lizberries.thelizards.it" target="_blank">https://blog-en.lizberries.thelizards.it</a> (tradotto automaticamente)</li>
+                    <li><strong>Blog Inglese:</strong> <a href="https://blog-en.thelizards.it" target="_blank">https://blog-en.thelizards.it</a> (tradotto automaticamente)</li>
                 </ul>
             </div>
 
@@ -499,7 +499,7 @@ Continua con il resto del contenuto...</code></pre>
                 </div>
 
                 <h3>Immagine di Default</h3>
-                <p>Se non specifichi un'immagine, verrà usato automaticamente il logo dei Lizberries.</p>
+                <p>Se non specifichi un'immagine, verrà usato automaticamente il logo dei The Lizards</p>
             </div>
 
             <div id="traduzione">
@@ -675,7 +675,7 @@ Continua con il resto del contenuto...</code></pre>
                 <p>Il sistema di upload è implementato con:</p>
                 <ul>
                     <li><strong>Frontend:</strong> Form HTML accessibile su <a href="https://blog.thelizards.it/upload.html" target="_blank">https://blog.thelizards.it/upload.html</a></li>
-                    <li><strong>Backend:</strong> Cloudflare Worker serverless (<a href="https://lizberries-blog-upload.lizberries.workers.dev" target="_blank">https://lizberries-blog-upload.lizberries.workers.dev</a>)</li>
+                    <li><strong>Backend:</strong> Cloudflare Worker serverless (<a href="https://thelizards-blog-upload.lizberries.workers.dev" target="_blank">https://thelizards-blog-upload.lizberries.workers.dev</a>)</li>
                     <li><strong>Autenticazione:</strong> Password protetta tramite variabile d'ambiente <code>UPLOAD_PASSWORD</code></li>
                     <li><strong>Storage:</strong> GitHub API - carica direttamente nel repository <code>thelizberries/blog</code></li>
                     <li><strong>Ottimizzazione immagini:</strong>
@@ -706,23 +706,23 @@ Continua con il resto del contenuto...</code></pre>
 
                 <h3>Configurazione variabili d'ambiente su Cloudflare</h3>
                 <ol>
-                    <li>Dashboard Cloudflare: Workers & Pages → lizberries-blog-upload → Settings → Variables</li>
+                    <li>Dashboard Cloudflare: Workers & Pages → thelizards-blog-upload → Settings → Variables</li>
                     <li><code>UPLOAD_PASSWORD</code>: Password per il form di upload → Encrypt → Save</li>
                     <li><code>GITHUB_TOKEN</code>: Personal Access Token con scope <code>repo</code> (token name "Blog Image Upload") → Encrypt → Save</li>
                 </ol>
 
                 <h3>Manutenzione</h3>
                 <ul>
-                    <li><strong>Per cambiare la password:</strong> Cloudflare Dashboard → Workers & Pages → lizberries-blog-upload → Settings → Variables</li>
+                    <li><strong>Per cambiare la password:</strong> Cloudflare Dashboard → Workers & Pages → thelizards-blog-upload → Settings → Variables</li>
                     <li><strong>Per rigenerare il token GitHub:</strong> <a href="https://github.com/settings/tokens" target="_blank">https://github.com/settings/tokens</a></li>
-                    <li><strong>Per modificare il codice:</strong> Cloudflare Dashboard → Workers & Pages → lizberries-blog-upload → Edit Code</li>
+                    <li><strong>Per modificare il codice:</strong> Cloudflare Dashboard → Workers & Pages → thelizards-blog-upload → Edit Code</li>
                 </ul>
             </div>
         </div>
 
         <footer>
             <p>Per qualsiasi dubbio o problema, contatta il team tecnico (Mattia)! 🎵</p>
-            <p style="margin-top: 10px; opacity: 0.8;">© 2025 Lizberries - The Cranberries Tribute Band</p>
+            <p style="margin-top: 10px; opacity: 0.8;">© 2025 The Lizards</p>
         </footer>
     </div>
 </body>
