Restore original index.html with Jekyll front matter

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-﻿<!DOCTYPE html>
-<html>
-<head><title>Test</title></head>
-<body><h1>TEST - Se vedi questo, GitHub Pages funziona ma Jekyll NO</h1></body>
-</html>
+﻿---
+layout: home
+title: "The Lizards Blog"
+lang: "it"
+---
