Use single quotes for post title in front matter to allow double quotes inside

--- a/upload.html
+++ b/upload.html
@@ -713,7 +713,8 @@ Vi aspettiamo numerosi! 🎵"></textarea>
                 const postFilename = `${date}-${slugify(title)}.md`;
                 
                 // Build front matter
-                let frontMatter = `---\nlayout: post\ntitle: "${title}"\ndate: ${date}\ndescription: "${description}"\n`;
+                // Always use single quotes for title to allow double quotes inside
+                let frontMatter = `---\nlayout: post\ntitle: '${title}'\ndate: ${date}\ndescription: "${description}"\n`;
                 if (imageWebpName) {
                     frontMatter += `image: /assets/images/posts/${imageWebpName}\n`;
                 }
